@@ -108,3 +108,4 @@
  3-Aug-2021  - V1.17 Propagate the uncomment option properly to __processList() method in IoUtil()
  5-Aug-2021  - V1.18 Add FtpUtil() class to handle FTP server operations.
 17-Aug-2021  - V1.19 Add sendContentType for postUnwrapped in UrlRequestUtil()
+28-Aug-2021  - V1.20 Add minimum file size warning for mmCIF deserializer
